ispCP ω 1.0.4 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2010-01-16 Marc Pujol
	- GUI:
		* Fixed #2168: Error Message in Browser: HY093 (whats wrong with my database?)

2010-01-13 Marc Pujol
	- GUI:
		* Updated spanish language files

2010-01-13 Sascha Bay
	- GUI:
		* Fixed #2164: Manual dns record's - Unable to access to the interface in some circumstances

2010-01-13 Laurent Declercq
	- GUI:
		* Fixed #2160: Backup button not exist in client's GUI
		* Added missing '$domain_expires|$dmn_expire' && '$allowbackup' && 
		 '$domain_dns|$dmn_dns' variables in all 'list()' that are linked to 
		  the function 'get_domain_default_props()'
		* Fixed wrong syntax for svn Id keyword in several files

2010-01-12 Thomas Wacker
	- GUI:
		* Fixed #2158: Wrong calculation for traffic in update hosting plan

2010-01-07 Peter Ziergöbel
	- GUI:
		* Fixed #2125: Domain expire date can't set to "Never" (N/A) when it changed

2010-01-12 Benedikt Heintel
	- ENGINE:
		* Fixed #2091: Make use of the BASE_SERVER_VHOST_PREFIX in ispcp-dmn-mngr for default pages
	- GUI:
		* Fixed #1121: Support System (review)

2010-01-12 Sascha Bay
	- GUI:
		* Fixed #2124: Errors in Layout Settings
		* Fixed #2144: Wrong Option declaration in Admin (reseller_edit.php)
		* Fixed #2151: Adding user and exceeding mail account from reseller won't work correct
		* Fixed #2153: Changing userlogo upload and deleting userlogo won't work
		* Fixed #2154: Reseller Overview shows -1 if function is disabled
		* Fixed #2157: Admin Option "Count default E-Mail addresses" work not correct

2010-01-12 Laurent Declercq
	- GUI:
		* Fixed #2118: The button "Show default E-mail addresses" should be hidden if the default mail addresses do not exists.
		* Fixed #2147: Not correct mail users count
		* Enhancement: Show/hide the mails addresses created by default is now possible

2010-01-12 Christian Hernmarck
	- CONFIGS:
		* Fixed #2149: tar [etch] does not understand --lzma (or --xz) -> info in config
