@@ -37,6 +37,7 @@ $tpl->define_dynamic('page', Config::get('RESELLER_TEMPLATE_PATH') . '/settings_
 $tpl->define_dynamic('page_message', 'page');
 $tpl->define_dynamic('logged_from', 'page');
 $tpl->define_dynamic('custom_buttons', 'page');
+$tpl->define_dynamic('alias_menu', 'page');
 
 $theme_color = Config::get('USER_INITIAL_THEME');
 $user_id = $_SESSION['user_id'];
@@ -121,6 +122,10 @@ $tpl->assign(
 );
 
 gen_page_message($tpl);
+
+if (check_domainalias_permissions($_SESSION['user_id'])) {
+	$tpl->assign('ALIAS_MENU', '');
+}
 
 $tpl->parse('PAGE', 'page');
 $tpl->prnt();
