@@ -36,6 +36,7 @@ $tpl = new pTemplate();
 $tpl->define_dynamic('page', Config::get('RESELLER_TEMPLATE_PATH') . '/settings_welcome_mail.tpl');
 $tpl->define_dynamic('page_message', 'page');
 $tpl->define_dynamic('logged_from', 'page');
+$tpl->define_dynamic('alias_menu', 'page');
 
 $theme_color = Config::get('USER_INITIAL_THEME');
 
@@ -103,6 +104,10 @@ $tpl->assign(
 );
 
 gen_page_message($tpl);
+
+if (check_domainalias_permissions($_SESSION['user_id'])) {
+	$tpl->assign('ALIAS_MENU', '');
+}
 
 $tpl->parse('PAGE', 'page');
 $tpl->prnt();
