@@ -37,6 +37,7 @@ $tpl->define_dynamic('page', Config::get('RESELLER_TEMPLATE_PATH') . '/user_add3
 $tpl->define_dynamic('page_message', 'page');
 $tpl->define_dynamic('logged_from', 'page');
 $tpl->define_dynamic('ip_entry', 'page');
+$tpl->define_dynamic('alias_menu', 'page');
 
 $theme_color = Config::get('USER_INITIAL_THEME');
 
@@ -115,6 +116,11 @@ if (isset($_POST['uaction'])
 
 gen_user_add3_page($tpl);
 gen_page_message($tpl);
+
+if (check_domainalias_permissions($_SESSION['user_id'])) {
+	$tpl->assign('ALIAS_MENU', '');
+}
+
 $tpl->parse('PAGE', 'page');
 $tpl->prnt();
 
